# sdl_fftw_visualizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: data_source.hpp  filter.hpp  postprocessing.hpp
include/data_sources/: pulseaudio.hpp
include/filters/: clip_filter.hpp  peek_filter.hpp  sagc_filter.hpp
src/: data_source.cpp  filter.cpp  main.cpp  postprocessing.cpp
src/data_sources/: pulseaudio.cpp
src/filters/: clip_filter.cpp  peek_filter.cpp  sagc_filter.cpp
tests/: data_sources.cpp  filters.cpp  postprocessing.cpp
